<resources>
    <!--1-普通量-->
    <string name="app_name">TeamManagement</string>
    <string name="warn">提示</string>
    <string name="warn_to_set_network">网络未连接,请设置网络</string>
    <string name="set_network">设置网络</string>
    <string name="temporarily_not_connect_network">暂不联网</string>
    <string name="warn_bad_consequence_of_not_connect_network">不联网部分功能将无法体验! ! !</string>
    <string name="whether_or_not_to_exitApp">确定退出应用吗</string>
    <string name="almost_exitApp">你差点就去了火星</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!--2-BottomNavMenu中的菜单项的标题-->
    <string name="bottom_title_0">消息</string>
    <string name="bottom_title_1">通讯录</string>
    <string name="bottom_title_2">发现</string>
    <string name="bottom_title_3">我的</string>

    <!--3-主界面toolbar中的菜单项-->
    <string name="toolbar_main_title_0">搜索</string>
    <string name="toolbar_main_title_1">添加</string>
    <string name="toolbar_main_title_2">添加朋友</string>
    <string name="toolbar_main_title_3">扫一扫</string>
    <!--聊天界面toolbar中菜单项-->
    <string name="toolbar_chat_right">右边</string>

    <!--4-不同界面Toolbar上标题内容-->
    <string name="add_group">新建群组</string>
    <string name="group_chat">群聊</string>
    <string name="add_contact">申请好友</string>
    <string name="new_friends_msg">申请与通知</string>

    <!--5-登录\注册\退出登录\申请好友-->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="logout">退出账号</string>
    <string name="new_user_signUp">新用户注册</string>
    <string name="forget_password">忘记密码</string>
    <!--提示语 登录-->
    <string name="Is_landing">正在登录...</string>
    <string name="Login_successfully">登录成功</string>
    <string name="Login_failed">登录失败:</string>
    <string name="User_not_found">不存在此用户</string>
    <string name="UserName_or_password_is_wrong">用户id或密码错误</string>
    <string name="Wait_for_server_response_timeout">等待服务器响应超时</string>
    <string name="User_login_on_another_device">账户在另外一台设备登录</string>
    <!--提示语 注册-->
    <string name="Is_the_registered">正在注册...</string>
    <string name="Registered_successfully">注册成功</string>
    <string name="Two_input_password">两次输入的密码不一致，请重新输入！</string>
    <string name="Registration_failed">注册失败:</string>
    <string name="User_already_exists">用户已存在！</string>
    <string name="illegal_user_name">用户名不合法</string>
    <string name="network_anomalies">网络异常，请检查网络！</string>
    <string name="registration_failed_without_permission">注册失败，无权限！</string>
    <!--提示语 登出-->
    <string name="Are_logged_out">正在退出登录..</string>
    <string name="Whether_or_not_to_logout">是否选择退出？</string>
    <string name="Logout_alert">退出当前账号后不会删除任何历史数据，下次登录依然可以使用本账号。</string>
    <!--提示语 申请好友-->
    <string name="Is_sending_a_request">正在发送请求...</string>
    <string name="Add_a_friend">加个好友呗</string>
    <string name="send_successful">发送请求成功,等待对方验证</string>
    <string name="Request_add_buddy_failure">请求添加好友失败:</string>

    <!--6-申请通知界面-->
    <string name="Has_agreed_to_your_friend_request">已同意你的好友请求</string>
    <string name="Request_to_add_you_as_a_friend">请求加你为好友</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="Are_agree_with">正在同意...</string>
    <string name="Are_refuse_with">正在拒绝...</string>
    <string name="Has_agreed_to">已同意</string>
    <string name="Has_refused_to">已拒绝</string>
    <string name="Agree_with_failure">同意失败:</string>
    <string name="Refuse_with_failure">拒绝失败:</string>
    <string name="Apply_to_the_group_of">申请加入群：</string>
    <string name="accept_join_group">同意加入群：</string>
    <string name="refuse_join_group">拒绝加入群：</string>

    <!--7-会话\聊天\联系人-->
    <string name="Are_delete_with">正在删除...</string>
    <string name="Are_add_to">正在移入...</string>
    <string name="Are_remove_from">正在移除...</string>
    <!--会话列表界面-->
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="the_current_network">当前网络不可用，请检查网络设置</string>
    <string name="Delete_conversation">删除会话</string>
    <string name="Delete_conversation_and_data">删除会话和消息</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <!---联系人列表界面-->
    <string name="Delete_contactUser">删除联系人</string>
    <string name="Add_to_blackList">移入到黑名单</string>
    <string name="Remove_from_blackList">从黑名单移除</string>
    <!---聊天界面-->
    <string name="Delete_message">删除消息</string>
    <string name="Repeat">转发</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>

    <!--8-群聊相关-->
    <!--群组列表界面-->
    <string name="Failed_to_get_group_chat_information">获取群聊信息失败...</string>
    <!--新建群组-->
    <string name="save">保存</string>
    <string name="Is_to_create_a_group_chat">正在创建群聊……</string>
    <string name="Failed_to_create_groups">创建群组失败...</string>
    <string name="invite_join_group">邀请加入群：</string>
    <string name="invite_friend">邀请好友</string>
    <string name="Group_name_cannot_be_empty">群组名称不能为空</string>
    <string name="base_setting">基本信息</string>
    <string name="group_name">群组名称(必填)</string>
    <string name="group_desc">群组简介</string>
    <string name="permission_setting">权限设置</string>
    <string name="isPublic">是否公开</string>
    <string name="isMemberCanInvite">开放群成员邀请</string>
    <string name="isJoinNeedApproval">加入公开群需要群主同意</string>



    <!--xxx-Preference个人喜好相关内容-->
    <string name="preference_category_title_0">通用</string>
    <string name="preference_category_title_1">其它说明</string>
    <string name="preference_key_0">save_net_mode</string>
    <string name="preference_key_1">light_mode</string>
    <string name="preference_key_2">clear_cache</string>
    <string name="preference_key_3">check_updates</string>
    <string name="preference_key_4">project_address</string>
    <string name="preference_title_0">省流量模式</string>
    <string name="preference_title_1">夜间模式</string>
    <string name="preference_title_2">清空缓存</string>
    <string name="preference_title_3">检查更新</string>
    <string name="preference_title_4">项目的GitHub地址</string>
    <string name="preference_summary_0">仅在Wi-Fi环境下才自动加载图片</string>
    <string name="preference_summary_1"></string>
    <string name="preference_summary_2">删除已缓存的文章内容及图片</string>
    <string name="preference_summary_3">当前版本号 V1.0</string>
    <string name="preference_summary_4">https://github.com/lyc-changeworld/MaterialTemplate</string>

</resources>
