<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/include_toolbar"
             android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInput_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:counterOverflowTextAppearance="@style/MyOverflowText"
            app:errorTextAppearance="@style/MyErrorStyle">
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInput_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterOverflowTextAppearance="@style/MyOverflowText"
            app:errorTextAppearance="@style/MyErrorStyle"
            app:passwordToggleEnabled="true">
            <!--这里需要设置app:passwordToggleEnabled="true"(默认是false)
            这样右边就会出现一个小眼睛,就可以控制密码是否明文显示-->
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <!--登陆按钮-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_login_disable_shape"
            android:textColor="#ffffff"
            android:enabled="false"
            android:text="@string/login"
            android:textSize="17dp"/>
    </LinearLayout>
    <!--忘记密码入口-->
    <TextView
        android:id="@+id/tv_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="#1874CD"
        android:text="@string/forget_password"
        android:textSize="15dp" />
    <!--新用户入口-->
    <TextView
        android:id="@+id/tv_newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="#1874CD"
        android:text="@string/new_user_signUp"
        android:textSize="15dp" />

</RelativeLayout>