<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/toolbar"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/OverflowMenuStyle">
        <Button
            android:id="@+id/btn_save_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            style="@style/Widget.AppCompat.ButtonBar"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <!--style="@style/Widget.AppCompat.ButtonBar"
            设置按钮的风格为无边界框-->
    </android.support.v7.widget.Toolbar>


    <!--功能标题文本显示-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/base_setting"/>
    <!--基本信息输入框-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">
        <!--群聊名称-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInput_groupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:counterOverflowTextAppearance="@style/MyOverflowText"
            app:errorTextAppearance="@style/MyErrorStyle">
            <EditText
                android:id="@+id/et_groupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_name"/>
        </android.support.design.widget.TextInputLayout>
        <!--群聊简介-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInput_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterOverflowTextAppearance="@style/MyOverflowText"
            app:errorTextAppearance="@style/MyErrorStyle">
            <!--这里需要设置app:passwordToggleEnabled="true"(默认是false)
            这样右边就会出现一个小眼睛,就可以控制密码是否明文显示-->
            <EditText
                android:id="@+id/et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_desc"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <!--功能标题文本显示-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/permission_setting"/>
    <!--群权限设置框-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="3dp"
        android:background="@color/colorCard">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/di_item"
            android:showDividers="middle">
            <!--是否公开-->
            <LinearLayout
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorText"
                    android:text="@string/isPublic"/>
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>
            </LinearLayout>
            <!--是否开放群成员邀请-->
            <LinearLayout
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_second_desc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorText"
                    android:text="@string/isMemberCanInvite"/>
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_member_inviter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>




</LinearLayout>