<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_item"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_row_weixin"
        android:gravity="center_vertical" >

        <RelativeLayout
            android:id="@+id/rl_avatar_container"
            android:layout_width="@dimen/height_row_weixin"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true" >
            <!--头像-->
            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/height_row_weixin"
                android:layout_height="@dimen/height_row_weixin"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:src="@drawable/em_default_avatar" />
        </RelativeLayout>

        <!--消息对象名称-->
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/rl_avatar_container"
            android:textColor="#000"
            android:textSize="16sp" />

        <!--消息产生的时间-->
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="7dp"
            android:layout_marginTop="6dp"
            android:textColor="#888888"
            android:textSize="13sp" />
        <!--消息状态图标-->
        <ImageView
            android:id="@+id/iv_msg_state"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@id/rl_avatar_container"
            android:src="@drawable/em_msg_state_fail_resend"
            android:visibility="gone" />
        <!--请求消息-->
        <TextView
            android:id="@+id/tv_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/iv_msg_state"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="7dp"
            android:textColor="#888888"
            android:textSize="14sp" />
        <!--同意按钮-->
        <Button
            android:id="@+id/btn_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btn_user_state"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/agree"
            android:textSize="13sp"
            android:visibility="gone" />
        <!--拒绝按钮-->
        <Button
            android:id="@+id/btn_user_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/refuse"
            android:textSize="13sp" />
    </RelativeLayout>

    <!--群邀请:额外布局提醒-->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <View
            style="@style/devide_line_eee"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="3dp"
            android:background="#dfdfdf" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">
            <!--群聊:-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_chat"
                android:textColor="@color/black"/>
            <!--群组名称-->
            <TextView
                android:id="@+id/tv_groupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#888888"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>